        * The final rendering is as if the bottom layer (last image) was rendered, then the next
          (second to last image) etc.
        * The transparent areas for a layer are the background image components.
        * If the background is clear there is no background layer.
        * If there is a background character then the bottom layer is the background layer.
    * compatibility improvements:
        * terminfo based terminals with no cursor support are silently accepted. The cursor
          visibility changes in the Picture will have no effect.
        * alternate (setf/setb) color maps supported. Though colors beyond the first 8 are just a
          guess.
        * added "rgb_color" for easy support of RGB specified colors.
    * input handling changes
        * tests exist.
        * the default amount of time between ESC and a subsequent character that causes VTY to
          interpret the input as "ESC" then the character, versus some special key, has been
          increased to 4000 microseconds; 4 milliseconds.
    * examples moved to vty-examples package. See test directory for cabal file.
        * vty-interactive-terminal-test
            * interactive test. Useful for building a bug report for vty's author.
            * test/interactive_terminal_test.hs
        * vty-event-echo
            * view a input event log for vty. Example of interacting with user.
            * test/EventEcho.hs
        * vty-rouge
            * A bad rouge-like game. Go from the entrance to exit. Example of layers
              and image build operations.
            * test/Rouge.hs
        * vty-benchmark
            * benchmarks vty. A series of tests that push random pictures to the terminal. The
              random pictures are generated using QuickCheck. The same generators used in the
              automated tests.
            * test/benchmark.hs

4.7.0.0
    * API changes: